# services/hus-auth/docs/swagger.json
@@ -18,6 +18,89 @@
     "host": "auth.cloudhus.com",
     "basePath": "/auth",
     "paths": {
+        "/hussession": {
+            "get": {
+                "description": "this endpoint can be used both for Cloudhus and subservices.\nif the subservice redirects the client to this endpoint with service name, session id and redirect url, its session will be connected to Hus session.\nand if fallback url is given, it will redirect to fallback url if it fails.\nbut if they are not given, it will just respond rather than redirecting.\nnote that all urls must be url-encoded using QueryEscape in net/url package.",
+                "tags": [
+                    "auth"
+                ],
+                "summary": "checks and issues the Hus session token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "subservice name",
+                        "name": "service",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "subservice session id",
+                        "name": "sid",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "redirect url",
+                        "name": "redirect",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "fallback url",
+                        "name": "fallback",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok, validated and connected"
+                    },
+                    "201": {
+                        "description": "Created, new Hus session connected"
+                    },
+                    "303": {
+                        "description": "See Other, redirection"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/hussession/{token}": {
+            "get": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "gets connection token from subservice and returns Hus session ID and user info",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "service name, session ID in signed token which expires only in 10 seconds",
+                        "name": "token",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok, session has been connected"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found, no such connected session"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/session/check/{service}/{sid}": {
             "post": {
                 "description": "checks the service and sid and tells the subservice server that the client is signed in.\nafter the subservice server updates the session and responds with 200,\nHus auth server also reponds with 200 to the client.",
@@ -95,17 +178,16 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "service name",
-                        "name": "service",
+                        "description": "url to be redirected after authentication",
+                        "name": "redirect",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "url to be redirected after authentication",
-                        "name": "redirect",
-                        "in": "query",
-                        "required": true
+                        "description": "url to be redirected if the authentication fails",
+                        "name": "fallback",
+                        "in": "query"
                     },
                     {
                         "description": "Google ID token",
